# prediction

./: .gitignore  ACTIVITY_LOG.md  CLAUDE.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  TODO.md  WORKFLOW.md  docker-compose.yml
.claude/agents/: jennie.md
.claude/commands/: clean.md  result.md  review.md  save.md  test.md
app/: DATA_ANALYSIS_REPORT.md  FINAL_TRAINING_REPORT.md  README.md  pyproject.toml
app/checkpoints/: training_summary.txt
app/data/: data_quality_summary.txt  forecasting_recommendations.txt
app/notebooks/: 01_data_exploration.ipynb
app/scripts/: analyze_intermittent_demand.py  build_baseline_models.py  build_intermittent_models.py  build_multiseries_forecaster.py  build_xgboost_models.py  build_xgboost_models_simple.py  build_xgboost_top20.py  check_data_dates.py  check_item_id_usage.py  check_itemid_mapping.py  check_jo_item_values.py  check_product_table.py  check_stkid_usage.py  create_data_quality_report.py  create_data_report.py  create_performance_report.py  extract_full_year_data.py  extract_lead_time_features.py  run_api.py  run_daily_forecast.py  test_asymmetric_loss.py  test_asymmetric_synthetic.py  test_data_extraction.py  test_database_connection.py  train_all_parts_pipeline.py  train_xgboost_pipeline.py  view_results_summary.py
app/src/: main.py
app/src/api/: __init__.py  app.py
app/src/api/routes/: __init__.py  analytics.py  predictions.py  reports.py
app/src/api/services/: __init__.py  cache.py  prediction_service.py
app/src/config/: database.py  settings.py
app/src/data/extractors/: base_extractor.py  job_order_extractor.py  purchase_extractor.py  sales_extractor.py
app/src/data/processors/: data_aggregator.py
app/src/forecasting/: trainer.py
app/src/forecasting/features/: calendar_features.py  intermittent_features.py  lead_time_features.py
app/src/forecasting/validation/: backtesting.py
app/src/reports/: email_sender.py  excel_reporter.py  report_generator.py
app/src/utils/: logger.py
app/tests/: test_integration.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: AlertsPanel.tsx  Dashboard.tsx  PartSearch.tsx  PredictionChart.tsx  (+1 more)
outputs/: FINAL_SUMMARY.md  NEXT_STEPS_PLAN.md
outputs/intermittent_analysis/: intermittency_recommendations.md
outputs/multiseries_forecast/: multiseries_report.md
outputs/performance_report/: performance_report.md
outputs/xgboost_top20/: xgboost_top20_report.md
reference/real-time-ml-system-cohort-3/: .dockerignore  .editorconfig  .env.local.example  README.md
(+4 files in other folders)
